@@ -1,3 +1,6 @@
+2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
+	* raw2avi.m: added x and y offsets to crop (frame_size) vector.
+
 2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
 	* raw_flipud.m: added.  vertically flips rawfile.
 
